--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.3.6",
-        "behat/behat": ">=2.4.6,<2.6.0"
+        "behat/behat": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
