--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,16 @@
         }
     ],
     "require": {
+        "php": ">=5.6",
         "behat/behat": "~3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6"
+    },
+    "config": {
+        "platform": {
+            "php": "5.6"
+        }
     },
     "autoload": {
         "psr-0": { "M00t\\Behat\\PartialRunner": "src/" }
